Please squash this commit in the pull request

--- a/docs/_includes/netlifycms_fields.html
+++ b/docs/_includes/netlifycms_fields.html
@@ -7,3 +7,12 @@
         - label: "Large image alt text"
           name: "homepage_alt"
           widget: "string"
+        - label: "Title"
+          name: "title"
+          widget: "string"
+        - label: "Other language name"
+          name: "lang_name"
+          widget: "string"
+        - label: "Other language URL"
+          name: "lang_url"
+          widget: "string"
