--- a/docs/_layouts/basic.html
+++ b/docs/_layouts/basic.html
@@ -66,7 +66,7 @@
                   </button>
                 <!-- Brand -->
                 <a class="navbar-brand page-scroll sticky-logo" href="index.html">
-                  <h1>Fondation <span>Bioenergia</span></h1>
+                  <h1>{{ page.title | raw }}</h1>
                   <!-- Uncomment below if you prefer to use an image logo -->
                 </a>
               </div>
