Please squash this commit in the pull request

--- a/docs/_includes/netlifycms_fields.html
+++ b/docs/_includes/netlifycms_fields.html
@@ -10,6 +10,27 @@
         - label: "Title"
           name: "title"
           widget: "string"
+        - label: "Contact us"
+          name: "contact_us"
+          widget: "string"
+        - label: "Supertitle on image"
+          name: "supertitle_on_image"
+          widget: "string"
+        - label: "Title on image"
+          name: "title_on_image"
+          widget: "string"
+        - label: "Main section title"
+          name: "main_title"
+          widget: "string"
+        - label: "Main section subtitle"
+          name: "main_sub"
+          widget: "string"
+        - label: "Main section image"
+          name: "main_img"
+          widget: "image"
+        - label: "Main section text"
+          name: "main_text"
+          widget: "text"
         - label: "Other language name"
           name: "lang_name"
           widget: "string"
@@ -21,7 +42,7 @@
           widget: "list"
           fields:
             - label: "Label, for example Contact"
-              name: "contact"
+              name: "label"
               widget: "string"
             - label: "Active or not"
               name: "active"
