Please squash this commit in the pull request

--- a/docs/_includes/netlifycms_fields.html
+++ b/docs/_includes/netlifycms_fields.html
@@ -30,7 +30,7 @@
           widget: "image"
         - label: "Main section text"
           name: "main_text"
-          widget: "text"
+          widget: "markdown"
         - label: "Other language name"
           name: "lang_name"
           widget: "string"
