Please squash this commit in the pull request

--- a/docs/_includes/netlifycms_fields.html
+++ b/docs/_includes/netlifycms_fields.html
@@ -28,6 +28,9 @@
         - label: "Main section image"
           name: "main_img"
           widget: "image"
+        - label: "Main section image alt"
+          name: "main_img_alt"
+          widget: "string"
         - label: "Main section text"
           name: "main_text"
           widget: "markdown"
