--- a/docs/_layouts/basic.html
+++ b/docs/_layouts/basic.html
@@ -66,24 +66,20 @@
                   </button>
                 <!-- Brand -->
                 <a class="navbar-brand page-scroll sticky-logo" href="index.html">
-                  <h1>Fondation <span>Bioenergia</span></h1>
+                  <h1>{{ page.title | raw }}</h1>
                   <!-- Uncomment below if you prefer to use an image logo -->
                 </a>
               </div>
               <!-- Collect the nav links, forms, and other content for toggling -->
               <div class="collapse navbar-collapse main-menu bs-example-navbar-collapse-1" id="navbar-example">
                 <ul class="nav navbar-nav navbar-right">
-                  <li class="active">
-                    <a class="page-scroll" href="#home">Accueil</a>
+                  {% for menu_item in page.menu %}
+                  <li{% if menu_item.active %} class="active"{% endif %}>
+                    <a class="page-scroll" href="{{ menu_item.url }}">{{ menu_item.label }}</a>
                   </li>
+                  {% endfor %}
                   <li>
-                    <a class="page-scroll" href="#about">À propos</a>
-                  </li>
-                  <li>
-                    <a class="page-scroll" href="#contact">Contact</a>
-                  </li>
-                  <li>
-                    <a class="page-scroll" href="http://bioenergiehaiti.org/don">Dons</a>
+                    <a class="page-scroll" href="{{ page.lang_url }}">{{ page.lang_name }}</a>
                   </li>
                   <!--<li>
                     <a class="page-scroll" href="#team">Conseil</a>
@@ -116,16 +112,18 @@
               <div class="slider-content">
                 <!-- layer 1 -->
                 <div class="layer-1-1 hidden-xs">
-                  <h2 class="title1">L'énergie de l'entreprenariat</h2>
+                  <h2 class="title1">{{ page.supertitle_on_image }}</h2>
                 </div>
                 <!-- layer 2 -->
                 <div class="layer-1-2">
-                  <h1 class="title2">Supportez un écosystème d'affaires pour une économie et un environnement durables</h1>
+                  <h1 class="title2">{{ page.title_on_image }}</h1>
                 </div>
                 <!-- layer 3 -->
                 <div class="layer-1-3 hidden-xs" >
-                  <a class="ready-btn right-btn page-scroll" href="#contact">Nous contacter</a>
+                  <a class="ready-btn right-btn page-scroll" href="#contact">{{ page.contact_us }}</a>
+                  <!--
                   <a class="ready-btn page-scroll" href="http://bioenergiehaiti.org/don">Faire un don</a>
+                  -->
                 </div>
               </div>
             </div>
@@ -142,7 +140,7 @@
       <div class="row">
         <div class="col-md-12 col-sm-12 col-xs-12">
           <div class="section-headline text-center">
-            <h2>Fondation Bioenergia</h2>
+            <h2>{{ page.main_title }}</h2>
           </div>
         </div>
       </div>
@@ -152,7 +150,7 @@
           <div class="well-left">
             <div class="single-well">
               <a href="#">
-                  <img src="img/about/1beh.jpg" alt="">
+                  <img src="{{ page.main_img }}" alt="{{ page.main_img_alt }}">
                 </a>
             </div>
           </div>
@@ -162,19 +160,9 @@
           <div class="well-middle">
             <div class="single-well">
               <a href="#">
-                <h4 class="sec-head">La Fondation Bioenergia a pour mission de soutenir des projets d'énergie propre et de valorisation des matières résiduelles dans les pays en voie de développement.</h4>
+                <h4 class="sec-head">{{ page.main_sub }}</h4>
               </a>
-              <p>
-                Ces pays sont les plus pénalisés par les changements climatiques et souffrent d'un manque chronique de financement des opérations de gestion des matières résiduelles, entraînant d'importants impacts sur la santé et l'économie de leurs populations, et sur l'environnement en général. Voilà pourquoi la Fondation appuie en particulier les projets de valorisation énergétique des matières résiduelles.
-              </p>
-              <ul>
-                <li>
-                  <i class="fa fa-check"></i> Projets concrets sur le terrain
-                </li>
-                <li>
-                  <i class="fa fa-check"></i> Infrastructure durable pour la communauté
-                </li>
-              </ul>
+              {{ page.main_text | markdown }}
             </div>
           </div>
         </div>
@@ -196,7 +184,7 @@
       <div class="row">
         <div class="col-md-12 col-sm-12 col-xs-12">
           <div class="text-center">
-            <p>Contactez-nous à l'adresse courriel <a href="mailto:admin@fondationbioenergia.org">admin@fondationbioenergia.org</a></p>
+            <p>{{ page.contact_us }}: <a href="mailto:admin@fondationbioenergia.org">admin@fondationbioenergia.org</a></p>
           </div>
         </div>
       </div>
