--- a/docs/_includes/netlifycms_fields.html
+++ b/docs/_includes/netlifycms_fields.html
@@ -1,6 +1,6 @@
         - name: "layout"
           widget: "hidden"
-          value: "basic"
+          default: "basic"
         - label: "Large image"
           name: "homepage_image"
           widget: "image"
