Add label to hidden fields

--- a/docs/_includes/netlifycms_config.html
+++ b/docs/_includes/netlifycms_config.html
@@ -11,6 +11,7 @@
         - name: "lang"
           widget: "hidden"
           default: "en"
+          label: "lang"
 {% include netlifycms_fields.html %}
       - label: "Site en français"
         name: "page_fr"
@@ -20,4 +21,5 @@
         - name: "lang"
           widget: "hidden"
           default: "fr"
+          label: "lang"
 {% include netlifycms_fields.html %}
