--- a/docs/_includes/netlifycms_fields.html
+++ b/docs/_includes/netlifycms_fields.html
@@ -1,6 +1,7 @@
         - name: "layout"
           widget: "hidden"
           default: "basic"
+          label: "layout"
         - label: "Large image"
           name: "homepage_image"
           widget: "image"
