https://stackoverflow.com/questions/72115567/netlify-cms-not-saving-hidden-fields use string, not hidden

--- a/docs/_includes/netlifycms_config.html
+++ b/docs/_includes/netlifycms_config.html
@@ -9,7 +9,7 @@
         file: "docs/en.html"
         fields:
         - name: "lang"
-          widget: "hidden"
+          widget: "string"
           default: "en"
           label: "lang"
 {% include netlifycms_fields.html %}
@@ -19,7 +19,7 @@
         file: "docs/index.html"
         fields:
         - name: "lang"
-          widget: "hidden"
+          widget: "string"
           default: "fr"
           label: "lang"
 {% include netlifycms_fields.html %}
