--- a/docs/_includes/netlifycms_fields.html
+++ b/docs/_includes/netlifycms_fields.html
@@ -1,5 +1,5 @@
         - name: "layout"
-          widget: "hidden"
+          widget: "string"
           default: "basic"
           label: "layout"
         - label: "Large image"
