--- a/docs/_layouts/basic.html
+++ b/docs/_layouts/basic.html
@@ -8,31 +8,31 @@
   <meta content="" name="description">
 
   <!-- Favicons -->
-  <link href="img/favicon.png" rel="icon">
-  <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="/img/favicon.png" rel="icon">
+  <link href="/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700|Raleway:300,400,400i,500,500i,700,800,900" rel="stylesheet">
+  <link href="/https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700|Raleway:300,400,400i,500,500i,700,800,900" rel="stylesheet">
 
   <!-- Bootstrap CSS File -->
-  <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Libraries CSS Files -->
-  <link href="lib/nivo-slider/css/nivo-slider.css" rel="stylesheet">
-  <link href="lib/owlcarousel/owl.carousel.css" rel="stylesheet">
-  <link href="lib/owlcarousel/owl.transitions.css" rel="stylesheet">
-  <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-  <link href="lib/animate/animate.min.css" rel="stylesheet">
-  <link href="lib/venobox/venobox.css" rel="stylesheet">
+  <link href="/lib/nivo-slider/css/nivo-slider.css" rel="stylesheet">
+  <link href="/lib/owlcarousel/owl.carousel.css" rel="stylesheet">
+  <link href="/lib/owlcarousel/owl.transitions.css" rel="stylesheet">
+  <link href="/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+  <link href="/lib/animate/animate.min.css" rel="stylesheet">
+  <link href="/lib/venobox/venobox.css" rel="stylesheet">
 
   <!-- Nivo Slider Theme -->
-  <link href="css/nivo-slider-theme.css" rel="stylesheet">
+  <link href="/css/nivo-slider-theme.css" rel="stylesheet">
 
   <!-- Main Stylesheet File -->
-  <link href="css/style.css" rel="stylesheet">
+  <link href="/css/style.css" rel="stylesheet">
 
   <!-- Responsive Stylesheet File -->
-  <link href="css/responsive.css" rel="stylesheet">
+  <link href="/css/responsive.css" rel="stylesheet">
 
   <!-- =======================================================
     Theme Name: eBusiness
@@ -57,7 +57,7 @@
             <nav class="navbar navbar-default">
               <!-- Brand and toggle get grouped for better mobile display -->
               <div class="navbar-header">
-                <img class="bioenergia-logo-mobile" alt="Logo en fleur de la Bioenergia" src="img/logo60-37.png" />
+                <img class="bioenergia-logo-mobile" alt="Logo en fleur de la Bioenergia" src="/img/logo60-37.png" />
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".bs-example-navbar-collapse-1" aria-expanded="false">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
@@ -65,7 +65,7 @@
                     <span class="icon-bar"></span>
                   </button>
                 <!-- Brand -->
-                <a class="navbar-brand page-scroll sticky-logo" href="index.html">
+                <a class="navbar-brand page-scroll sticky-logo" href="/index.html">
                   <h1>{{ page.title | raw }}</h1>
                   <!-- Uncomment below if you prefer to use an image logo -->
                 </a>
@@ -82,7 +82,7 @@
                     <a class="page-scroll" href="{{ page.lang_url }}">{{ page.lang_name }}</a>
                   </li>
                   <!--<li>
-                    <a class="page-scroll" href="#team">Conseil</a>
+                    <a class="page-scroll" href="/#team">Conseil</a>
                   </li>-->
                 </ul>
               </div>
@@ -97,6 +97,7 @@
   </header>
   <!-- header end -->
 
+  {% if page.homepage_image %}
   <!-- Start Slider Area -->
   <div id="home" class="slider-area">
     <div class="bend niceties preview-2">
@@ -120,9 +121,9 @@
                 </div>
                 <!-- layer 3 -->
                 <div class="layer-1-3 hidden-xs" >
-                  <a class="ready-btn right-btn page-scroll" href="#contact">{{ page.contact_us }}</a>
+                  <a class="ready-btn right-btn page-scroll" href="/#contact">{{ page.contact_us }}</a>
                   <!--
-                  <a class="ready-btn page-scroll" href="http://bioenergiehaiti.org/don">Faire un don</a>
+                  <a class="ready-btn page-scroll" href="/http://bioenergiehaiti.org/don">Faire un don</a>
                   -->
                 </div>
               </div>
@@ -133,6 +134,7 @@
     </div>
   </div>
   <!-- End Slider Area -->
+  {% endif %}
 
   <!-- Start About area -->
   <div id="about" class="about-area area-padding">
@@ -149,7 +151,7 @@
         <div class="col-md-6 col-sm-6 col-xs-12">
           <div class="well-left">
             <div class="single-well">
-              <a href="#">
+              <a href="/#">
                   <img src="{{ page.main_img }}" alt="{{ page.main_img_alt }}">
                 </a>
             </div>
@@ -159,7 +161,7 @@
         <div class="col-md-6 col-sm-6 col-xs-12">
           <div class="well-middle">
             <div class="single-well">
-              <a href="#">
+              <a href="/#">
                 <h4 class="sec-head">{{ page.main_sub }}</h4>
               </a>
               {{ page.main_text | markdown }}
@@ -184,7 +186,7 @@
       <div class="row">
         <div class="col-md-12 col-sm-12 col-xs-12">
           <div class="text-center">
-            <p>{{ page.contact_us }}: <a href="mailto:admin@fondationbioenergia.org">admin@fondationbioenergia.org</a></p>
+            <p>{{ page.contact_us }}: <a href="/mailto:admin@fondationbioenergia.org">admin@fondationbioenergia.org</a></p>
           </div>
         </div>
       </div>
@@ -206,23 +208,23 @@
           <div class="col-md-3 col-sm-3 col-xs-12">
             <div class="single-team-member">
               <div class="team-img">
-                <a href="#">
-                    <img src="img/team/avatar.jpg" alt="">
+                <a href="/#">
+                    <img src="/img/team/avatar.jpg" alt="">
                   </a>
                 <div class="team-social-icon text-center">
                   <ul>
                     <li>
-                      <a href="#">
+                      <a href="/#">
                           <i class="fa fa-facebook"></i>
                         </a>
                     </li>
                     <li>
-                      <a href="#">
+                      <a href="/#">
                           <i class="fa fa-twitter"></i>
                         </a>
                     </li>
                     <li>
-                      <a href="#">
+                      <a href="/#">
                           <i class="fa fa-instagram"></i>
                         </a>
                     </li>
@@ -238,23 +240,23 @@
           <div class="col-md-3 col-sm-3 col-xs-12">
             <div class="single-team-member">
               <div class="team-img">
-                <a href="#">
-                    <img src="img/team/avatar.jpg" alt="">
+                <a href="/#">
+                    <img src="/img/team/avatar.jpg" alt="">
                   </a>
                 <div class="team-social-icon text-center">
                   <ul>
                     <li>
-                      <a href="#">
+                      <a href="/#">
                           <i class="fa fa-facebook"></i>
                         </a>
                     </li>
                     <li>
-                      <a href="#">
+                      <a href="/#">
                           <i class="fa fa-twitter"></i>
                         </a>
                     </li>
                     <li>
-                      <a href="#">
+                      <a href="/#">
                           <i class="fa fa-instagram"></i>
                         </a>
                     </li>
@@ -270,23 +272,23 @@
           <div class="col-md-3 col-sm-3 col-xs-12">
             <div class="single-team-member">
               <div class="team-img">
-                <a href="#">
-                    <img src="img/team/avatar.jpg" alt="">
+                <a href="/#">
+                    <img src="/img/team/avatar.jpg" alt="">
                   </a>
                 <div class="team-social-icon text-center">
                   <ul>
                     <li>
-                      <a href="#">
+                      <a href="/#">
                           <i class="fa fa-facebook"></i>
                         </a>
                     </li>
                     <li>
-                      <a href="#">
+                      <a href="/#">
                           <i class="fa fa-twitter"></i>
                         </a>
                     </li>
                     <li>
-                      <a href="#">
+                      <a href="/#">
                           <i class="fa fa-instagram"></i>
                         </a>
                     </li>
@@ -302,23 +304,23 @@
           <div class="col-md-3 col-sm-3 col-xs-12">
             <div class="single-team-member">
               <div class="team-img">
-                <a href="#">
-                    <img src="img/team/avatar.jpg" alt="">
+                <a href="/#">
+                    <img src="/img/team/avatar.jpg" alt="">
                   </a>
                 <div class="team-social-icon text-center">
                   <ul>
                     <li>
-                      <a href="#">
+                      <a href="/#">
                           <i class="fa fa-facebook"></i>
                         </a>
                     </li>
                     <li>
-                      <a href="#">
+                      <a href="/#">
                           <i class="fa fa-twitter"></i>
                         </a>
                     </li>
                     <li>
-                      <a href="#">
+                      <a href="/#">
                           <i class="fa fa-instagram"></i>
                         </a>
                     </li>
@@ -357,8 +359,8 @@
                 Licensing information: https://bootstrapmade.com/license/
                 Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=eBusiness
               -->
-              Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-              Re-distributed by <a href="https://themewagon.com/" target="_blank">Themewagon</a>
+              Designed by <a href="/https://bootstrapmade.com/">BootstrapMade</a>
+              Re-distributed by <a href="/https://themewagon.com/" target="_blank">Themewagon</a>
             </div>
           </div>
         </div>
@@ -366,26 +368,26 @@
     </div>
   </footer>
 
-  <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
+  <a href="/#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
 
   <!-- JavaScript Libraries -->
-  <script src="lib/jquery/jquery.min.js"></script>
-  <script src="lib/bootstrap/js/bootstrap.min.js"></script>
-  <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-  <script src="lib/venobox/venobox.min.js"></script>
-  <script src="lib/knob/jquery.knob.js"></script>
-  <script src="lib/wow/wow.min.js"></script>
-  <script src="lib/parallax/parallax.js"></script>
-  <script src="lib/easing/easing.min.js"></script>
-  <script src="lib/nivo-slider/js/jquery.nivo.slider.js" type="text/javascript"></script>
-  <script src="lib/appear/jquery.appear.js"></script>
-  <script src="lib/isotope/isotope.pkgd.min.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8HeI8o-c1NppZA-92oYlXakhDPYR7XMY"></script>
+  <script src="/lib/jquery/jquery.min.js"></script>
+  <script src="/lib/bootstrap/js/bootstrap.min.js"></script>
+  <script src="/lib/owlcarousel/owl.carousel.min.js"></script>
+  <script src="/lib/venobox/venobox.min.js"></script>
+  <script src="/lib/knob/jquery.knob.js"></script>
+  <script src="/lib/wow/wow.min.js"></script>
+  <script src="/lib/parallax/parallax.js"></script>
+  <script src="/lib/easing/easing.min.js"></script>
+  <script src="/lib/nivo-slider/js/jquery.nivo.slider.js" type="text/javascript"></script>
+  <script src="/lib/appear/jquery.appear.js"></script>
+  <script src="/lib/isotope/isotope.pkgd.min.js"></script>
+  <script src="/https://maps.googleapis.com/maps/api/js?key=AIzaSyD8HeI8o-c1NppZA-92oYlXakhDPYR7XMY"></script>
 
   <!-- Contact Form JavaScript File -->
-  <script src="contactform/contactform.js"></script>
+  <script src="/contactform/contactform.js"></script>
 
-  <script src="js/main.js"></script>
+  <script src="/js/main.js"></script>
 </body>
 
 </html>
